save appVersion success

--- a/appinfo/resources/log4j.properties
+++ b/appinfo/resources/log4j.properties
@@ -4,10 +4,10 @@ log4j.rootLogger=info,debug,CONSOLE,file
 log4j.logger.cn.appsys=info
 log4j.logger.org.apache.ibatis=info
 log4j.logger.org.mybatis.spring=info
-log4j.logger.java.sql.Connection=debug
-log4j.logger.java.sql.Statement=debug
-log4j.logger.java.sql.PreparedStatement=debug
-log4j.logger.java.sql.ResultSet=debug
+log4j.logger.java.sql.Connection=info
+log4j.logger.java.sql.Statement=info
+log4j.logger.java.sql.PreparedStatement=info
+log4j.logger.java.sql.ResultSet=info
 
 ######################################################################################
 # Console Appender  \u65e5\u5fd7\u5728\u63a7\u5236\u8f93\u51fa\u914d\u7f6e
